--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "hono-stripe-api",
   "scripts": {
-    "dev": "wrangler dev",
-    "deploy": "wrangler deploy --minify",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+    "dev": "run-p dev:*",
+    "dev:wrangler": "wrangler pages dev dist --live-reload",
+    "dev:esbuild": "esbuild --bundle src/server.ts --format=esm --watch --outfile=dist/_worker.js",
+    "build": "esbuild --bundle src/server.ts --format=esm --outfile=dist/_worker.js",
+    "deploy": "wrangler pages publish dist"
   },
   "dependencies": {
-    "hono": "^4.4.13"
+    "hono": "^4.4.13",
+    "stripe": "^16.2.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240712.0",
+    "npm-run-all": "^4.1.5",
     "wrangler": "^3.57.2"
   }
 }
