--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "Bundler",
     "strict": true,
     "skipLibCheck": true,
+    "maxNodeModuleJsDepth": 20,
     "lib": [
       "ESNext"
     ],
